# Stegcore

./: .coverage  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-COMMERCIAL  MANIFEST.in  README.md  SECURITY.md  USAGE.md  cli.py  install  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  security.md  stegcore-linux.spec  stegcore-macos.spec  stegcore-windows.spec  stegprotocolv4.py  user_interface.py
.cargo/: config.toml
.github/workflows/: ci.yml  coverage.yml  dev-build.yml  licence-check.yml  release.yml
Image Tests/: image_tests.py  ssim_psnr_payloadcheck.py
Stegcore scripts/: main.py  stegprotocolv4.py
Stegcore scripts/core/: crypto.py  steg.py  utils.py
Stegcore scripts/ui/: app.py  embed_flow.py  extract_flow.py  theme.py
core/: crypto.py  steg.py  utils.py
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs  output.rs  prompt.rs
crates/cli/src/commands/: analyse.rs  analyze.rs  ciphers.rs  diff.rs  embed.rs  extract.rs  info.rs  mod.rs  score.rs  wizard.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: analysis.rs  errors.rs  ffi.rs  keyfile.rs  lib.rs  steg.rs  utils.rs  verses.rs
crates/engine/: Cargo.toml
crates/engine/src/: analysis.rs  crypto.rs  errors.rs  jpeg_dct.rs  keyfile.rs  lib.rs  steg.rs  utils.rs
docker/: Dockerfile  docker-compose.yml
docs/: cli-reference.md  security-model.md  user-guide.md  vs-alternatives.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: AnalysisDetail.tsx  DropZone.tsx  EntropyBar.tsx  IconButton.tsx  Installer.css  Installer.tsx  KeyboardShortcuts.tsx  ProcessingScreen.tsx  ScoreCard.tsx  Settings.tsx  SplashDark.tsx  SplashLight.tsx  StepTrack.tsx  SuccessCheck.tsx  ToastContainer.tsx  Toggle.tsx
frontend/src/components/steganalysis/: AudioWaveform.tsx  ChiSquaredChart.tsx  LSBHeatmap.tsx  OscilloscopeTrace.tsx  RSAnalysisChart.tsx  SPAGauge.tsx  SteganalysisReport.tsx  analysisTheme.ts  types.ts  useAnimationFrame.ts
frontend/src/lib/: ipc.ts  sound.ts  theme.ts  toast.ts
frontend/src/lib/stores/: dragStore.ts  embedStore.ts  extractStore.ts  settingsStore.ts
frontend/src/routes/: Analyse.tsx  Analyze.tsx  Embed.tsx  Extract.tsx  Home.tsx  Learn.tsx
scripts/: bench.sh  test_deniable.sh  test_errors.sh  test_formats.sh  test_full.sh  test_steganalysis.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: conftest.py  test_crypto.py  test_integration.py  test_key_file.py  test_steg.py
tests/assets/: payload.txt  payload_decoy.txt  payload_large.txt  payload_tiny.txt
ui/: __init__.py  app.py  embed_flow.py  extract_flow.py  theme.py
