[package]
name = "stegcore-tauri"
version = "4.0.0"
description = "Stegcore desktop application — Tauri backend"
authors = []
license = "AGPL-3.0-or-later"
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "stegcore-gui"
path = "src/main.rs"

[lib]
name = "stegcore_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
stegcore-core = { path = "../crates/core" }

# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# Image (for pixel diff)
image = { version = "0.25", default-features = false, features = ["png", "bmp", "jpeg", "webp"] }

# Parallelism
rayon = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
