[package]
name = "stegcore-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore public wrapper — FFI bindings + types"
license = "AGPL-3.0-only"

[lib]
name = "stegcore_core"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error types
thiserror = "1"

# Temp files
tempfile = "3"

# Logging
log = "0.4"
