[package]
name = "stegcore-core"
version = "4.0.0-beta.1"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore public wrapper — engine bindings + types"
license = "AGPL-3.0-only"

[lib]
name = "stegcore_core"
crate-type = ["rlib"]

[features]
default = ["engine"]
engine = ["dep:stegcore-engine"]

[dependencies]
# Engine (optional — builds stub when absent)
stegcore-engine = { path = "../../libstegcore", optional = true }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Error types
thiserror = "1"

# Temp files
tempfile = "3"

# Logging
log = "0.4"

# Parallelism
rayon = "1"
