[package]
name = "stegcore-engine"
version = "4.0.0"
edition = "2021"
rust-version = "1.77.2"
description = "Stegcore steganography engine — adaptive LSB, deniable dual-payload, steganalysis suite."
license = "AGPL-3.0-or-later"
repository = "https://github.com/elementmerc/Stegcore"
authors = ["The Malware Files <ops@themalwarefiles.com>"]

[lib]
name = "stegcore_engine"
crate-type = ["lib"]

[dependencies]
ascon-aead       = "0.4"
chacha20poly1305 = "0.10"
aes-gcm          = "0.10"
argon2           = "0.5"
zstd             = "0.13"
dct-io           = "0.1"
image            = { version = "0.25", features = ["png", "bmp", "jpeg", "webp"] }
hound            = "3.5"
symphonia        = { version = "0.5", features = ["flac"] }
bitvec           = "1"
rand             = "0.8"
rand_chacha      = "0.3"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
base64           = "0.22"
thiserror        = "1"
zeroize          = { version = "1", features = ["derive"] }
tempfile         = "3"
statrs           = "0.17"
rayon            = "1"
bumpalo          = "3"
